[project]
name = "credit-spread-system"
version = "0.1.0"
description = "Decision-support tool for credit spread portfolios."
readme = "Credit_Spread_System_PRD.md"
requires-python = ">=3.11"
dependencies = [
  "alpaca-py>=0.20.0",
  "gspread>=6.1.0",
  "pydantic>=2.6.0",
  "pandas-market-calendars>=4.1.0,<5.0",
  "python-dotenv>=1.0.0",
  "streamlit>=1.32.0",
]

[tool.pytest.ini_options]
testpaths = ["credit_spread_system/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
